packages/beff-core/tests/snapshots/report_error__tests__fail5.snap
---
source: packages/beff-core/tests/report_error.rs
expression: fail(from)
---
Error: ~~~
   ╭─[<unknown>:1:1]
   │
 3 │     export default A
   │                    ┬  
   │                    ╰── Cannot find symbol 'A'
───╯

